crates/inertia-embed/tests/ui/fail/missing_root_setting.rs
use inertia_embed::embed_frontend;

fn main() {
    let _ = embed_frontend! {
        entry: "src/main.ts",
    };
}
